# robo_orchard_data_recorder

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py
docs/doc_gen/: __init__.py  index.py
example/: .gitignore  README.md
example/basic/: .gitignore  app_launch_cfg.json  launch_app.sh
example/challenge_cup/: .gitignore  README.md  app_launch_cfg.json  gen_data_recorder_config.py  gen_depth_encoding_config.py  launch_depth_encoder.sh  launch_image_encoder.sh  launch_static_tf_publisher.sh
example/challenge_cup/foxglove_layout/: offline.json  websocket.json
python/robo_orchard_file_server/: pyproject.toml  setup.py
python/robo_orchard_file_server/robo_orchard_file_server/: simple_file_server.py  utils.py
python/robo_orchard_recorder_app/: Makefile  pyproject.toml  setup.py
python/robo_orchard_recorder_app/robo_orchard_recorder_app/: __init__.py  app.py  cli.py  components.py  config.py  utils.py
ros2_package/: Makefile  README.md
ros2_package/robo_orchard_data_ros2/: MANIFEST.in  package.xml  setup.cfg  setup.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/codec/image/: codec.py  config.py  encoder_node.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/mcap/: config.py  node.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/tf/: config.py  node.py
scm/: requirements.txt
tests/: .coveragerc
tests/python/test_robo_orchard_data_recorder/: test_import.py
tests/python/test_robo_orchard_file_server/: conftest.py  test_simple_file_server.py
